// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages serviceList should render an error when the error flag is set to true 1`] = `
<FullColumnLayout
  description="Service List selection page of the Create Fares Data Service"
  title="Service List - Create Fares Data Service"
>
  <CsrfForm
    action="/api/serviceList"
    csrfToken=""
    encType="multipart/form-data"
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose at least one service from the list",
            "id": "service-list-error",
          },
        ]
      }
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          <h1
            className="govuk-heading-l"
            id="service-list-page-heading"
          >
            Which 
            services is the ticket valid for?
          </h1>
        </legend>
        <span
          className="govuk-heading-s"
        >
          Select all 
          services that apply
        </span>
        <input
          className="govuk-button govuk-button--secondary"
          id="select-all-button"
          name="selectAll"
          onClick={[Function]}
          type="button"
          value="Unselect All Services"
        />
        <span
          className="govuk-hint"
          id="txc-hint"
        >
          This data is taken from the
           
          <b>
            Bus Open Data Service (BODS)
          </b>
          . If the service you are looking for is not listed, contact the BODS help desk for advice 
          <a
            href="/contact"
          >
            on the contact page
          </a>
          .
        </span>
        <FormElementWrapper
          addFormGroupError={false}
          errorClass=""
          errorId="checkbox-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className=""
    >
      <div
        className="govuk-warning-text"
      >
        <span
          aria-hidden="true"
          className="govuk-warning-text__icon"
        >
          !
        </span>
        <strong
          className="govuk-warning-text__text"
        >
          <span
            className="govuk-warning-text__assistive"
          >
            Warning
          </span>
          If there are stops exempt, you can omit them by selecting yes below and uploading the stops you want to omit.
        </strong>
      </div>
      <div
        className="govuk-form-group"
      >
        <fieldset
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--m"
          >
            <h2
              className="govuk-fieldset__heading"
            >
              Are there stops which are not included?
            </h2>
          </legend>
          <FormElementWrapper
            errorClass="govuk-form-group--error"
            errorId="csv-upload"
            errors={Array []}
          >
            <div
              className="govuk-radios"
              data-module="govuk-radios"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  data-aria-controls="conditional-yes"
                  defaultChecked={false}
                  id="yes"
                  name="exempt"
                  type="radio"
                  value="yes"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="yes"
                >
                  Yes
                </label>
              </div>
              <div
                className="govuk-radios__conditional govuk-radios__conditional--hidden"
                id="conditional-yes"
              >
                <div
                  className="govuk-form-group "
                >
                  <label
                    htmlFor="csv-upload"
                  >
                    <h1
                      className="govuk-heading-m"
                    >
                      Upload exempt stops
                    </h1>
                  </label>
                  <span
                    className="govuk-hint govuk-!-margin-bottom-5"
                    id="csv-upload-hint"
                  >
                    Upload exempt stops as a .csv or MS Excel file. Exempt stops are all of the relevant NaPTAN or ATCO codes that the service(s) you selected do not stop at.
                  </span>
                  <FormGroupWrapper
                    errorIds={
                      Array [
                        "csv-upload",
                      ]
                    }
                    errors={Array []}
                  >
                    <FormElementWrapper
                      errorClass="govuk-file-upload--error"
                      errorId="csv-upload"
                      errors={Array []}
                    >
                      <input
                        accept=".csv,.xlsx,.xls"
                        aria-describedby="csv-upload-hint"
                        className="govuk-file-upload"
                        id="csv-upload"
                        name="csv-upload"
                        type="file"
                      />
                    </FormElementWrapper>
                  </FormGroupWrapper>
                </div>
                <details
                  className="govuk-details govuk-!-margin-top-2"
                  data-module="govuk-details"
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      My exempt stops won't upload
                    </span>
                  </summary>
                  <div
                    className="govuk-details__text"
                  >
                    <p>
                      Use the below template to upload your exempt stops. This is the same template as used for fare zones, but just include ATCO/NaPTAN codes of the stops that you wish to exempt.
                    </p>
                    <FileAttachment
                      attachmentUrl="[object Object]"
                      displayName="Download fare zone CSV template - File Type CSV - File Size 673B"
                      imageUrl={Object {}}
                      size="673B"
                    />
                  </div>
                </details>
              </div>
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  defaultChecked={true}
                  id="no"
                  name="exempt"
                  type="radio"
                  value="no"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="no"
                >
                  No
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages serviceList should render correctly for multiOperator 1`] = `
<FullColumnLayout
  description="Service List selection page of the Create Fares Data Service"
  title="Service List - Create Fares Data Service"
>
  <CsrfForm
    action="/api/serviceList"
    csrfToken=""
    encType="multipart/form-data"
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          <h1
            className="govuk-heading-l"
            id="service-list-page-heading"
          >
            Which 
            of your 
            services is the ticket valid for?
          </h1>
        </legend>
        <span
          className="govuk-heading-s"
        >
          Select all 
          of your 
          services that apply
        </span>
        <input
          className="govuk-button govuk-button--secondary"
          id="select-all-button"
          name="selectAll"
          onClick={[Function]}
          type="button"
          value="Select All Services"
        />
        <span
          className="govuk-hint"
          id="txc-hint"
        >
          This data is taken from the
           
          <b>
            Traveline National Dataset (TNDS)
          </b>
          . If the service you are looking for is not listed, contact the BODS help desk for advice 
          <a
            href="/contact"
          >
            on the contact page
          </a>
          .
        </span>
        <FormElementWrapper
          addFormGroupError={false}
          errorClass=""
          errorId="checkbox-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
          >
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-123"
            >
              <input
                checked={false}
                className="govuk-checkboxes__input"
                defaultChecked={false}
                id="checkbox-0"
                name="123#3h3vb32ik#NW_05_BLAC_123_1"
                onChange={[Function]}
                type="checkbox"
                value="IW Bus Service 123"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-0"
              >
                123 - IW Bus Service 123
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className=""
    >
      <div
        className="govuk-warning-text"
      >
        <span
          aria-hidden="true"
          className="govuk-warning-text__icon"
        >
          !
        </span>
        <strong
          className="govuk-warning-text__text"
        >
          <span
            className="govuk-warning-text__assistive"
          >
            Warning
          </span>
          If there are stops exempt, you can omit them by selecting yes below and uploading the stops you want to omit.
        </strong>
      </div>
      <div
        className="govuk-form-group"
      >
        <fieldset
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--m"
          >
            <h2
              className="govuk-fieldset__heading"
            >
              Are there stops which are not included?
            </h2>
          </legend>
          <FormElementWrapper
            errorClass="govuk-form-group--error"
            errorId="csv-upload"
            errors={Array []}
          >
            <div
              className="govuk-radios"
              data-module="govuk-radios"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  data-aria-controls="conditional-yes"
                  defaultChecked={false}
                  id="yes"
                  name="exempt"
                  type="radio"
                  value="yes"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="yes"
                >
                  Yes
                </label>
              </div>
              <div
                className="govuk-radios__conditional govuk-radios__conditional--hidden"
                id="conditional-yes"
              >
                <div
                  className="govuk-form-group "
                >
                  <label
                    htmlFor="csv-upload"
                  >
                    <h1
                      className="govuk-heading-m"
                    >
                      Upload exempt stops
                    </h1>
                  </label>
                  <span
                    className="govuk-hint govuk-!-margin-bottom-5"
                    id="csv-upload-hint"
                  >
                    Upload exempt stops as a .csv or MS Excel file. Exempt stops are all of the relevant NaPTAN or ATCO codes that the service(s) you selected do not stop at.
                  </span>
                  <FormGroupWrapper
                    errorIds={
                      Array [
                        "csv-upload",
                      ]
                    }
                    errors={Array []}
                  >
                    <FormElementWrapper
                      errorClass="govuk-file-upload--error"
                      errorId="csv-upload"
                      errors={Array []}
                    >
                      <input
                        accept=".csv,.xlsx,.xls"
                        aria-describedby="csv-upload-hint"
                        className="govuk-file-upload"
                        id="csv-upload"
                        name="csv-upload"
                        type="file"
                      />
                    </FormElementWrapper>
                  </FormGroupWrapper>
                </div>
                <details
                  className="govuk-details govuk-!-margin-top-2"
                  data-module="govuk-details"
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      My exempt stops won't upload
                    </span>
                  </summary>
                  <div
                    className="govuk-details__text"
                  >
                    <p>
                      Use the below template to upload your exempt stops. This is the same template as used for fare zones, but just include ATCO/NaPTAN codes of the stops that you wish to exempt.
                    </p>
                    <FileAttachment
                      attachmentUrl="[object Object]"
                      displayName="Download fare zone CSV template - File Type CSV - File Size 673B"
                      imageUrl={Object {}}
                      size="673B"
                    />
                  </div>
                </details>
              </div>
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  defaultChecked={true}
                  id="no"
                  name="exempt"
                  type="radio"
                  value="no"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="no"
                >
                  No
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages serviceList should render correctly when in edit mode 1`] = `
<FullColumnLayout
  description="Service List selection page of the Create Fares Data Service"
  title="Service List - Create Fares Data Service"
>
  <BackButton
    href="/product/productDetails?id=99"
  />
  <CsrfForm
    action="/api/serviceList"
    csrfToken=""
    encType="multipart/form-data"
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          <h1
            className="govuk-heading-l"
            id="service-list-page-heading"
          >
            Which 
            services is the ticket valid for?
          </h1>
        </legend>
        <span
          className="govuk-heading-s"
        >
          Select all 
          services that apply
        </span>
        <input
          className="govuk-button govuk-button--secondary"
          id="select-all-button"
          name="selectAll"
          onClick={[Function]}
          type="button"
          value="Select All Services"
        />
        <span
          className="govuk-hint"
          id="txc-hint"
        >
          This data is taken from the
           
          <b>
            Bus Open Data Service (BODS)
          </b>
          . If the service you are looking for is not listed, contact the BODS help desk for advice 
          <a
            href="/contact"
          >
            on the contact page
          </a>
          .
        </span>
        <FormElementWrapper
          addFormGroupError={false}
          errorClass=""
          errorId="checkbox-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
          >
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-123"
            >
              <input
                checked={false}
                className="govuk-checkboxes__input"
                defaultChecked={false}
                id="checkbox-0"
                name="123#3h3vb32ik#NW_05_BLAC_123_1"
                onChange={[Function]}
                type="checkbox"
                value="IW Bus Service 123"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-0"
              >
                123 Manchester - Leeds
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className="govuk-!-margin-bottom-6"
    >
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h2
          className="govuk-fieldset__heading"
        >
          You previously uploaded
           
          no exempt stops
          . Do you want to edit them?
           
        </h2>
      </legend>
      <div
        className="govuk-radios"
        data-module="govuk-radios"
      >
        <div
          className="govuk-radios__item"
        >
          <input
            className="govuk-radios__input"
            data-aria-controls="conditional-yes"
            id="exempt-yes"
            name="edit-exempt"
            onChange={[Function]}
            type="radio"
            value="yes"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="exempt-yes"
          >
            Yes
          </label>
        </div>
        <div
          className="govuk-radios__item"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={true}
            id="exempt-no"
            name="edit-exempt"
            onChange={[Function]}
            type="radio"
            value="no"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="exempt-no"
          >
            No
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-visually-hidden"
    >
      <div
        className="govuk-warning-text"
      >
        <span
          aria-hidden="true"
          className="govuk-warning-text__icon"
        >
          !
        </span>
        <strong
          className="govuk-warning-text__text"
        >
          <span
            className="govuk-warning-text__assistive"
          >
            Warning
          </span>
          If there are stops exempt, you can omit them by selecting yes below and uploading the stops you want to omit.
        </strong>
      </div>
      <div
        className="govuk-form-group"
      >
        <fieldset
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--m"
          >
            <h2
              className="govuk-fieldset__heading"
            >
              Are there stops which are not included?
            </h2>
          </legend>
          <FormElementWrapper
            errorClass="govuk-form-group--error"
            errorId="csv-upload"
            errors={Array []}
          >
            <div
              className="govuk-radios"
              data-module="govuk-radios"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  data-aria-controls="conditional-yes"
                  defaultChecked={true}
                  id="yes"
                  name="exempt"
                  type="radio"
                  value="yes"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="yes"
                >
                  Yes
                </label>
              </div>
              <div
                className="govuk-radios__conditional govuk-radios__conditional--hidden"
                id="conditional-yes"
              >
                <div
                  className="govuk-form-group "
                >
                  <label
                    htmlFor="csv-upload"
                  >
                    <h1
                      className="govuk-heading-m"
                    >
                      Upload exempt stops
                    </h1>
                  </label>
                  <span
                    className="govuk-hint govuk-!-margin-bottom-5"
                    id="csv-upload-hint"
                  >
                    Upload exempt stops as a .csv or MS Excel file. Exempt stops are all of the relevant NaPTAN or ATCO codes that the service(s) you selected do not stop at.
                  </span>
                  <FormGroupWrapper
                    errorIds={
                      Array [
                        "csv-upload",
                      ]
                    }
                    errors={Array []}
                  >
                    <FormElementWrapper
                      errorClass="govuk-file-upload--error"
                      errorId="csv-upload"
                      errors={Array []}
                    >
                      <input
                        accept=".csv,.xlsx,.xls"
                        aria-describedby="csv-upload-hint"
                        className="govuk-file-upload"
                        id="csv-upload"
                        name="csv-upload"
                        type="file"
                      />
                    </FormElementWrapper>
                  </FormGroupWrapper>
                </div>
                <details
                  className="govuk-details govuk-!-margin-top-2"
                  data-module="govuk-details"
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      My exempt stops won't upload
                    </span>
                  </summary>
                  <div
                    className="govuk-details__text"
                  >
                    <p>
                      Use the below template to upload your exempt stops. This is the same template as used for fare zones, but just include ATCO/NaPTAN codes of the stops that you wish to exempt.
                    </p>
                    <FileAttachment
                      attachmentUrl="[object Object]"
                      displayName="Download fare zone CSV template - File Type CSV - File Size 673B"
                      imageUrl={Object {}}
                      size="673B"
                    />
                  </div>
                </details>
              </div>
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  defaultChecked={false}
                  id="no"
                  name="exempt"
                  type="radio"
                  value="no"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="no"
                >
                  No
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages serviceList should render correctly with bods data source 1`] = `
<FullColumnLayout
  description="Service List selection page of the Create Fares Data Service"
  title="Service List - Create Fares Data Service"
>
  <CsrfForm
    action="/api/serviceList"
    csrfToken=""
    encType="multipart/form-data"
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          <h1
            className="govuk-heading-l"
            id="service-list-page-heading"
          >
            Which 
            services is the ticket valid for?
          </h1>
        </legend>
        <span
          className="govuk-heading-s"
        >
          Select all 
          services that apply
        </span>
        <input
          className="govuk-button govuk-button--secondary"
          id="select-all-button"
          name="selectAll"
          onClick={[Function]}
          type="button"
          value="Select All Services"
        />
        <span
          className="govuk-hint"
          id="txc-hint"
        >
          This data is taken from the
           
          <b>
            Bus Open Data Service (BODS)
          </b>
          . If the service you are looking for is not listed, contact the BODS help desk for advice 
          <a
            href="/contact"
          >
            on the contact page
          </a>
          .
        </span>
        <FormElementWrapper
          addFormGroupError={false}
          errorClass=""
          errorId="checkbox-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
          >
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-123"
            >
              <input
                checked={false}
                className="govuk-checkboxes__input"
                defaultChecked={false}
                id="checkbox-0"
                name="123#3h3vb32ik#NW_05_BLAC_123_1"
                onChange={[Function]}
                type="checkbox"
                value="IW Bus Service 123"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-0"
              >
                123 Manchester - Leeds
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className=""
    >
      <div
        className="govuk-warning-text"
      >
        <span
          aria-hidden="true"
          className="govuk-warning-text__icon"
        >
          !
        </span>
        <strong
          className="govuk-warning-text__text"
        >
          <span
            className="govuk-warning-text__assistive"
          >
            Warning
          </span>
          If there are stops exempt, you can omit them by selecting yes below and uploading the stops you want to omit.
        </strong>
      </div>
      <div
        className="govuk-form-group"
      >
        <fieldset
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--m"
          >
            <h2
              className="govuk-fieldset__heading"
            >
              Are there stops which are not included?
            </h2>
          </legend>
          <FormElementWrapper
            errorClass="govuk-form-group--error"
            errorId="csv-upload"
            errors={Array []}
          >
            <div
              className="govuk-radios"
              data-module="govuk-radios"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  data-aria-controls="conditional-yes"
                  defaultChecked={false}
                  id="yes"
                  name="exempt"
                  type="radio"
                  value="yes"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="yes"
                >
                  Yes
                </label>
              </div>
              <div
                className="govuk-radios__conditional govuk-radios__conditional--hidden"
                id="conditional-yes"
              >
                <div
                  className="govuk-form-group "
                >
                  <label
                    htmlFor="csv-upload"
                  >
                    <h1
                      className="govuk-heading-m"
                    >
                      Upload exempt stops
                    </h1>
                  </label>
                  <span
                    className="govuk-hint govuk-!-margin-bottom-5"
                    id="csv-upload-hint"
                  >
                    Upload exempt stops as a .csv or MS Excel file. Exempt stops are all of the relevant NaPTAN or ATCO codes that the service(s) you selected do not stop at.
                  </span>
                  <FormGroupWrapper
                    errorIds={
                      Array [
                        "csv-upload",
                      ]
                    }
                    errors={Array []}
                  >
                    <FormElementWrapper
                      errorClass="govuk-file-upload--error"
                      errorId="csv-upload"
                      errors={Array []}
                    >
                      <input
                        accept=".csv,.xlsx,.xls"
                        aria-describedby="csv-upload-hint"
                        className="govuk-file-upload"
                        id="csv-upload"
                        name="csv-upload"
                        type="file"
                      />
                    </FormElementWrapper>
                  </FormGroupWrapper>
                </div>
                <details
                  className="govuk-details govuk-!-margin-top-2"
                  data-module="govuk-details"
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      My exempt stops won't upload
                    </span>
                  </summary>
                  <div
                    className="govuk-details__text"
                  >
                    <p>
                      Use the below template to upload your exempt stops. This is the same template as used for fare zones, but just include ATCO/NaPTAN codes of the stops that you wish to exempt.
                    </p>
                    <FileAttachment
                      attachmentUrl="[object Object]"
                      displayName="Download fare zone CSV template - File Type CSV - File Size 673B"
                      imageUrl={Object {}}
                      size="673B"
                    />
                  </div>
                </details>
              </div>
              <div
                className="govuk-radios__item"
              >
                <input
                  className="govuk-radios__input"
                  defaultChecked={true}
                  id="no"
                  name="exempt"
                  type="radio"
                  value="no"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="no"
                >
                  No
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</FullColumnLayout>
`;
